@@ -15,6 +15,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       is the working directory as in PBS_O_WORKDIR.
   e - change so blcr checkpoint jobs can restart on different node. Use
       configure --enable-blcr to allow.
+  b - remove the use of a GNU specific function, and fix an error for solaris builds
 
 
 2.5.4
